# SeetaFaceEngine

AutoFamilyPhoto/auto_rotation/: CMakeLists.txt  main.cpp
FaceDetection/: CMakeLists.txt
